# IOC_Config

./: ABOUT.md  ADVANCED_FEATURES.md  ARCHITECTURE.md  BUILDER_GUIDE.md  CHANGELOG.md  CMakeLists.txt  COMPLETION_REPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_PACKAGE.txt  DOCUMENTATION_READY.txt  DOCUMENTATION_SUMMARY.md  FINAL_REPORT.md  IMPLEMENTATION_GUIDE.md  JSON_SCHEMA_GUIDE.md  LICENSE  MISSING_FEATURES_ANALYSIS.md  PHASE_1_COMPLETION_REPORT.md  PHASE_1_SUMMARY.md  PHASE_2A1_COMPLETION_SUMMARY.md  PHASE_2A1_PATH_ACCESS_REPORT.md  PHASE_2A2_XML_SUPPORT_REPORT.md  PHASE_2A3_CSV_SUPPORT_REPORT.md  PHASE_2B1_BATCH_OPERATIONS_REPORT.md  PHASE_2B2_STREAMING_IO_REPORT.md  PHASE_2_PROGRESS_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFERENCE_MANUAL.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RESOURCES_INDEX.md  build.sh  convert_to_pdf.py  ioc_config.pc.in
examples/: CMakeLists.txt  basic_usage.cpp  builder_example.cpp  config_builder_example.cpp  config_example.yaml  config_schema.json  config_template.json  json_config_example.cpp  oop_to_json_converter.cpp  yaml_config_example.cpp
include/ioc_config/: oop_parser.h
src/: oop_parser.cpp
tests/: CMakeLists.txt  test_batch.cpp  test_builder.cpp  test_builder_schema.cpp  test_constraints.cpp  test_conversion.cpp  test_csv.cpp  test_json.cpp  test_merge_diff.cpp  test_parser.cpp  test_path_access.cpp  test_streaming.cpp  test_versioning.cpp  test_xml.cpp  test_yaml.cpp
tools/: CMakeLists.txt  ioc_config_cli.cpp
